--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "react-router-dom": "^6.23.0",
     "sharp": "^0.33.3"
   }
 }
