--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.568.0",
+    "@aws-sdk/s3-request-presigner": "^3.569.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
