--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/s3-request-presigner": "^3.569.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
