added mantine dropzone package

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.568.0",
     "@aws-sdk/s3-request-presigner": "^3.569.0",
+    "@mantine/dropzone": "^7.11.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
