--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@mantine/nprogress": "^7.11.0",
     "@reduxjs/toolkit": "^2.2.5",
     "dayjs": "^1.11.11",
+    "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^8.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
