added properly directed include property to global css module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,9 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src"
+    "frontend/src"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
